# bee-classifier

./: .gitignore  LICENSE  annotation_matcher.py  coordinate_transformation.py  create_images.py  crop_images.py  daily_data_processing.py  data_overview.py  datasets.py  draw_roi.py  evaluate_performance.py  evaluate_pixel_threshold.py  evaluate_pixel_threshold_against_large_sample.py  find_threshold_value.py  find_waggles.py  grid.py  grid_pdf.py  hyperparameters.py  image_cropping.py  inference.py  model.py  pyproject.toml  sample.py  split_dataset.py  tensor_board.py  test.py  tracking_video.py  train.py  utils.py
markers/: color_markers.py  converter.py  test_converter.py  wdd markers files.ipynb
output/: classifier_results.json  data_overview.json  matching_waggles.json  model.pth  samples.csv
output/examples/: data.csv  data_one_by_one.csv
scripts/: crop_images.py  plot_images.py  split_dataset.py
